Añadidos ejemplos de eventos y configuraciones

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>Ejemplo Dropzone</title>
     <script src="dropzone.js" defer></script>
     <script src="crearDropdown.js" defer></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
     <link rel="stylesheet" href="dropzone.css">
 </head>
 <body>
 <div id="container">
     <form action="upload.php"
           class="dropzone"
-          id="my-awesome-dropzone">
+          id="dropzone">
     </form>
 
     <button onclick="crearDropdown()">Generar Dropdown</button>
